--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -9,10 +9,19 @@ body, html
 
 body
     background: #1D3571
+    @include background-image(linear-gradient(top,  rgba(35,31,32,0.6) 0%, rgba(35,31,32,0) 50%, rgba(35,31,32,0.6) 100%))
 
     .wrapper
-        @include background-image(linear-gradient(top,  rgba(35,31,32,0.6) 0%, rgba(35,31,32,0) 50%, rgba(35,31,32,0.6) 100%))
         height: 100%
+
+.container
+    width: 90%
+
+.inactive
+    display: none
+
+#footer
+    height: 50px
 
 .pattern
     position: absolute
@@ -21,21 +30,23 @@ body
 .pattern.large
     width: 725px
     height: 681px
-    top: -340px
+    top: 0px
     left: -363px
     opacity: .05
+    z-index: -1
 
 
 .pattern.small
     overflow: hidden
-    width: 325px
-    height: 381px
+    width: 725px
+    height: 681px
     right: 0px
-    bottom: 0px
+    bottom: -500px
     opacity: .08
     background-size: 100%
     background-repeat: no-repeat
     background-position: 60px 120px
+    z-index: -1
 
 
 .hightlights
@@ -99,3 +110,156 @@ body
     margin-top: 70px
     font-size: 48px
     color: #6C99B9
+
+.header
+    background-image: url(../images/header-frame.png)
+    height: 596px
+    width: 1162px
+
+    div#logo-words
+        margin-top: 30px
+        margin-right: 50px
+        z-index: 1
+    div#logo
+        img
+            height: 80px
+        padding-top: 30px
+        margin-left: 50px
+
+    div#nav
+        margin-right: 40px
+        ul
+            a
+                padding-top: 0px
+                padding-bottom: 0px
+                color: white
+                &:hover
+                    background: none
+
+            li
+                border-right-style: solid
+                border-width: thin
+                border-color: #373737
+                height: 20px
+                vertical-align: middle
+ 
+
+    div#banner
+        margin-left: 20px
+        margin-top: 38px
+        z-index: 100
+
+div#instructor-list
+    width: 1130px
+    margin-top: -25px
+    margin-left: 10px
+
+    div#instructors
+
+        background-color: rgb(125,185,232) // Old browsers
+        @include background-image(linear-gradient(left,  rgba(125,185,232,1) 0%,rgba(41,137,216,1) 0%,rgba(32,124,202,1) 0%,rgba(12,13,61,1) 45%,rgba(10,2,9,1) 100%))
+        
+        @include border-top-radius(5px)
+        @include border-bottom-radius(5px)
+        @include border-left-radius(5px)
+        @include border-right-radius(5px)
+        @include box-shadow(0 0 5px 3px hsla(0, 0%, 0%, 0.65))
+
+        h3
+            margin: 20px
+            padding-top: 20px
+        li 
+            margin-left: 10px
+            a
+                padding: 0px
+                
+                img
+                    border: solid thin
+                    padding: 4px
+            p
+                text-align: center
+
+    div#instructor-block
+        margin-top: 15px
+        z-index: 100
+
+        img
+            @include border-top-radius(5px)
+            @include border-bottom-radius(5px)
+            @include border-left-radius(5px)
+            @include border-right-radius(5px)
+            border: solid thin
+            padding: 4px
+            width: 224px
+        .man-story
+            @include border-top-radius(5px)
+            @include border-bottom-radius(5px)
+            @include border-left-radius(5px)
+            @include border-right-radius(5px)
+
+            //background-color: rgba(125,185,232) // Old browsers
+            //@include background-image(linear-gradient(left, rgba(125,185,232,0.5) 0%,rgba(41,137,216,0.5) 0%,rgba(26,30,163,1) 0%,rgba(12,13,61,1) 100%,rgba(10,2,9,1) 100%))
+            @include background-image(linear-gradient(left, rgba(26,30,163,0.4) 0%,rgba(10,2,9,0.5) 100%))
+            //opacity: 0.5
+            float: right
+            width: 850px
+
+            h3
+                margin-left: 15px
+                z-index: 101
+                margin-bottom: 50px
+                &::after
+                    content: ""
+                    width: 95%
+                    height: 5px
+                    display: block
+                    z-index: 2
+                    position: relative
+                    top: 16px 
+                    background: rgba(#fff, 0)
+                    @include background-image(linear-gradient(90deg, rgba(180, 153, 91, 0.8) 0, rgba(226, 60, 29, 0.8) 100%))
+            pre
+                margin-left: 10px
+                z-index: 101
+                border: none
+                color: rgba(255, 255, 255, 0.79)
+                background: none
+                padding-top: 10px 
+                font-size: 1.2em
+
+div#article
+    img
+        float: right
+        padding: 10px
+    p
+        font-size: 1.2em
+        padding-left: 40px
+
+    background-image: url(../images/mid.png)
+    background-repeat: repeat-y
+    padding-bottom: 40px
+    margin-top: 12px
+
+
+
+div#content-frame-top    
+    
+    width: 100%
+    height: 44px
+    display: block
+    z-index: 2
+    position: relative
+    top: 16px 
+    background: rgba(#fff, 0)
+    background-image: url(../images/top.png) 
+
+div#content-frame-bottom
+    width: 100%
+    height: 126px
+    display: block
+    background-image: url(../images/bottom.png)
+    background-repeat: no-repeat
+    
+
+
+
