--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -20,8 +20,9 @@ body
 .inactive
     display: none
 
-#footer
+div#footer
     height: 50px
+    clear: both
 
 .pattern
     position: absolute
@@ -190,7 +191,7 @@ div#instructor-list
             @include border-right-radius(5px)
             border: solid thin
             padding: 4px
-            width: 224px
+            width: 264px
         .man-story
             @include border-top-radius(5px)
             @include border-bottom-radius(5px)
@@ -228,12 +229,32 @@ div#instructor-list
                 font-size: 1.2em
 
 div#article
-    img
+    div#video-wrap
         float: right
         padding: 10px
+        padding-left: 20px
+        margin-right: 45px
+    h3
+        padding-left: 40px
+        margin-bottom: 20px
+        &::after
+            content: ""
+            width: 95%
+            height: 3px
+            display: block
+            z-index: 2
+            top: 10px
+            position: relative
+            background: rgba(#fff, 0)
+            @include background-image(linear-gradient(90deg, rgba(180, 153, 91, 0.8) 0, rgba(226, 60, 29, 0.8) 100%))
+    h4
+        font-size: 1.5em
+        margin-top: 25px
+        padding-left: 40px
     p
         font-size: 1.2em
         padding-left: 40px
+        line-height: 2em
 
     background-image: url(../images/mid.png)
     background-repeat: repeat-y
@@ -249,7 +270,7 @@ div#content-frame-top
     display: block
     z-index: 2
     position: relative
-    top: 16px 
+    top: 24px 
     background: rgba(#fff, 0)
     background-image: url(../images/top.png) 
 
