--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -5,24 +5,33 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/"
 
 body, html
     height: 100%
-    color: #fff
+    // color: #fff
 
 body
-    background: #1D3571
-    @include background-image(linear-gradient(top,  rgba(35,31,32,0.6) 0%, rgba(35,31,32,0) 50%, rgba(35,31,32,0.6) 100%))
+    // background: #1D3571
+    // @include background-image(linear-gradient(top,  rgba(35,31,32, 1.0) 0%, rgba(35,31,32, 0.0) 100%))
+    // @include background-image(linear-gradient(top, rgba(2,23,34,1) 0%, rgba(157,192,222,1) 100%))
+    // background-repeat: no-repeat
     zoom: 90%
     -o-transform: scale(0.9) // firefox zoom
     .wrapper
         height: 100%
 
+.container-wrapper
+    font-family: "Microsoft JhengHei","Microsoft YaHei","HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,sans-serif
+    background: #1D71DD
+    @include background-image(linear-gradient(top, rgba(6,8,24,0.8) 0%, rgba(46,97,152,0.0) 100%))
+
 .container
     width: 90%
+    // @include background-image(linear-gradient(top, rgba(6,8,24,1) 0%, rgba(46,97,152,1) 100%))
+
 
 .inactive
     display: none
 
 div#footer
-    height: 50px
+    height: 70px
     clear: both
 
 .pattern
@@ -30,25 +39,26 @@ div#footer
     background-image: url(../images/bg-pattern.png)
 
 .pattern.large
+
     width: 725px
     height: 681px
     top: 0px
     left: -363px
     opacity: .05
-    z-index: -1
+    z-index: 1
 
 
 .pattern.small
-    overflow: hidden
+    
     width: 725px
     height: 681px
     right: 0px
-    bottom: -500px
+    top: 500px
     opacity: .08
-    background-size: 100%
-    background-repeat: no-repeat
-    background-position: 60px 120px
-    z-index: -1
+    // background-size: 100%
+    // background-repeat: no-repeat
+    // background-position: 60px 120px
+    z-index: 0
 
 
 .hightlights
@@ -155,6 +165,7 @@ div#instructor-list
     width: 1130px
     margin-top: -25px
     margin-left: 10px
+    color:  white
 
     div#instructors
 
@@ -172,6 +183,7 @@ div#instructor-list
             padding-top: 20px
         li 
             margin-left: 10px
+            z-index: 10
             a
                 padding: 0px
                 
@@ -186,18 +198,22 @@ div#instructor-list
         z-index: 100
 
         img
-            @include border-top-radius(5px)
-            @include border-bottom-radius(5px)
-            @include border-left-radius(5px)
-            @include border-right-radius(5px)
-            border: solid thin
+            @include border-top-radius(10px)
+            @include border-bottom-radius(10px)
+            @include border-left-radius(10px)
+            @include border-right-radius(10px)
+            @include box-shadow(5px 5px 5px 3px hsla(0, 0%, 0%, 0.65))
+            background: rgba(26,30,163,0.4)
+            border: solid thin white
             padding: 4px
-            width: 264px
+            width: 251px
+
         .man-story
-            @include border-top-radius(5px)
-            @include border-bottom-radius(5px)
-            @include border-left-radius(5px)
-            @include border-right-radius(5px)
+            @include border-top-radius(10px)
+            @include border-bottom-radius(10px)
+            @include border-left-radius(10px)
+            @include border-right-radius(10px)
+            @include box-shadow(5px 5px 5px 3px hsla(0, 0%, 0%, 0.65))
 
             //background-color: rgba(125,185,232) // Old browsers
             //@include background-image(linear-gradient(left, rgba(125,185,232,0.5) 0%,rgba(41,137,216,0.5) 0%,rgba(26,30,163,1) 0%,rgba(12,13,61,1) 100%,rgba(10,2,9,1) 100%))
@@ -205,11 +221,41 @@ div#instructor-list
             //opacity: 0.5
             float: right
             width: 850px
+            height: 690px
+            border: solid 3px
+            border-right-style: none
+            border-color: rgb(41,92,146)
+            overflow-y: scroll
+
+            // &::-webkit-scrollbar-thumb
+            //     -webkit-border-radius: 10px
+            //     border-radius: 10px
+            //     background: url('http://cdn.css-tricks.com/wp-content/themes/CSS-Tricks-10/images/header-demos.jpg')
+            //     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5)
+            &::-webkit-scrollbar-track
+                -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3)
+                background-color: #F5F5F5
+                background: url(../images/ball-bar.png) top center repeat-y
+                width: 18px
+
+            &::-webkit-scrollbar
+                width: 18px
+                height: 100%
+                
+            // &::-webkit-scrollbar-thumb
+            //     background-color: #0ae
+            //     background-image: -webkit-gradient(linear, 0 0, 0 100%, color-stop(0.5, rgba(255, 255, 255, 0.2)), color-stop(0.5, transparent), to(transparent))
+            &::-webkit-scrollbar-thumb
+                -webkit-border-radius: 10px
+                border-radius: 10px
+                background: url('../images/ball.png') center center no-repeat
+                -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5)
 
             h3
                 margin-left: 15px
                 z-index: 101
                 margin-bottom: 50px
+                color: white
                 &::after
                     content: ""
                     width: 95%
@@ -222,6 +268,7 @@ div#instructor-list
                     @include background-image(linear-gradient(90deg, rgba(180, 153, 91, 0.8) 0, rgba(226, 60, 29, 0.8) 100%))
             pre
                 margin-left: 10px
+                margin-right: 20px
                 z-index: 101
                 border: none
                 color: rgba(255, 255, 255, 0.79)
@@ -243,6 +290,9 @@ div#article
         padding-right: 10px
         padding-left: 20px
         margin-right: 45px
+        width: 420px
+        height: 380px
+
     h3.half
         &::after
             width: 50%
@@ -263,6 +313,9 @@ div#article
         font-size: 1.5em
         margin-top: 25px
         padding-left: 40px
+
+    .no-margin-top
+        margin-top: 0px
     p
         font-size: 1.2em
         padding-left: 40px
@@ -270,7 +323,7 @@ div#article
         line-height: 2em
 
     a.email
-        background-color: white
+        background-color: rgb(51,152,221)
         @include border-top-radius(5px)
         @include border-bottom-radius(5px)
         @include border-left-radius(5px)
@@ -278,26 +331,31 @@ div#article
         @include box-shadow(5px 5px 5px 3px hsla(0, 0%, 0%, 0.65))
         text-decoration: none
         padding: 5px 10px
+        color: white
+
+
 
 
     background-image: url(../images/mid.png)
     background-repeat: repeat-y
     padding-bottom: 40px
-    margin-top: 12px
+    // margin-top: 12px
     width: 100%
+    color: white
 
 
 
 div#content-frame-top    
     
     width: 100%
-    height: 44px
+    height: 40px
     display: block
     z-index: 2
     position: relative
-    top: 24px 
-    background: rgba(#fff, 0)
+    // top: 21px 
+    // background: rgba(#fff, 0)
     background-image: url(../images/top.png) 
+    background-repeat: no-repeat
 
 div#content-frame-bottom
     width: 100%
@@ -305,7 +363,6 @@ div#content-frame-bottom
     display: block
     background-image: url(../images/bottom.png)
     background-repeat: no-repeat
-    
 
 
 
