--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -21,6 +21,7 @@ body
     font-family: "Microsoft JhengHei","Microsoft YaHei","HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,sans-serif
     background: #1D71DD
     @include background-image(linear-gradient(top, rgba(6,8,24,0.8) 0%, rgba(46,97,152,0.0) 100%))
+    min-width: 1600px
 
 .container
     width: 90%
@@ -248,8 +249,13 @@ div#instructor-list
             &::-webkit-scrollbar-thumb
                 -webkit-border-radius: 10px
                 border-radius: 10px
-                background: url('../images/ball.png') center center no-repeat
+                background: url('../images/ball.png') top center no-repeat
                 -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5)
+
+            &::-webkit-scroll
+                height: 590px
+                background-color: yellow
+            
 
             h3
                 margin-left: 15px
