--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -27,6 +27,7 @@ body
 
 .container
     min-width: 1170px
+    min-height: 1187px
     // width: 100%
     // margin-left: auto
     // margin-right: auto
@@ -161,7 +162,19 @@ div#footer
                 border-color: #373737
                 height: 20px
                 vertical-align: middle
+
+        ul.dropdown-menu
+            background: black
+
+            li
+                height: 40px
+                border-bottom-style: solid 
+                border-right-style: none
+                a
+                    height: 40px
+                    padding-top: 10px
  
+    
 
     div#banner
         margin-left: 20px
@@ -337,6 +350,13 @@ div#article
         padding-left: 40px
         padding-right: 60px
         line-height: 2em
+    p.right
+        text-align: right
+    p.indent
+        text-indent: 2em
+    ul
+        margin-left: 40px
+        padding-right: 60px
 
     a.email
         background-color: rgb(51,152,221)
