9p bg color ch test

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -19,8 +19,14 @@ body
 
 .container-wrapper
     font-family: "Microsoft JhengHei","Microsoft YaHei","HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,sans-serif
-    background: #1D71DD
-    @include background-image(linear-gradient(top, rgba(6,8,24,0.8) 0%, rgba(46,97,152,0.0) 100%))
+    // background: #1D71DD
+    // background: #13498F
+    background: rgb(25,62,91)
+    @include background-image(linear-gradient(top, rgb(2,23,35) 0%, rgb(56,115,168) 100%))
+    
+    // @include background-image(linear-gradient(top, rgba(6,8,24,0.8) 0%, rgba(46,97,152,0.0) 100%))
+    // @include background-image(linear-gradient(top, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.0) 100%))
+    
     min-width: 1280px
     margin: 0px
     position: relative
