--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -321,6 +321,14 @@ div#content-frame
     width: 1160px
 
 div#article
+    div.image-wrap
+        float: right
+        padding: 10px
+        padding-left: 20px
+        margin-right: 45px
+        padding-top: 35px
+        z-index: 1000
+
     div.video-wrap
         float: right
         padding: 10px
@@ -337,6 +345,11 @@ div#article
     h3.half
         &::after
             width: 50%
+
+    h3.vedio-half
+        &::after
+            width: 40%
+
     h3
         padding-left: 40px
         margin-bottom: 20px
